tests/ui/derive/enum_rejected.stderr
error: clapfig::Schema can only be derived for structs (not "enum")
 --> tests/ui/derive/enum_rejected.rs:4:6
  |
4 | enum Mode {
  |      ^^^^
