tests/ui/derive/enum_rejected.rs
use clapfig::Schema;

#[derive(Schema)]
enum Mode {
    Fast,
    Slow,
}

fn main() {}
